style.css
*,
*::before,
*::after {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

body {
	font-family: "Space Grotesk", sans-serif;
	background-color: #1a1b26;
	color: #c0caf5;
}

.profile-card {
	display: flex;
	flex-direction: column;
	gap: 40px;
	width: 500px;
	max-width: 90%;
	height: auto;
	margin: 100px auto;
	padding-bottom: 40px;
	background-color: #24283b;
	border-radius: 40px;
}

.profile-header {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 20px;
	padding-top: 40px;
}

.profile-avatar {
	width: 100px;
	aspect-ratio: 1 / 1;
	object-fit: cover;
}

.profile-info {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 10px;
}

.bio-line {
	display: block;
	text-align: center;
	line-height: 1.5;
	color: #565f89;
}

.links-container {
	display: flex;
	flex-direction: column;
	gap: 20px;
}

.link-button {
	position: relative;
	display: flex;
	align-items: center;
	justify-content: center;
	width: 80%;
	height: 50px;
	margin: 0 auto;
	background-color: #414868;
	border-radius: 40px;
	color: inherit;
	text-decoration: none;
}

.social-icon {
	position: absolute;
	left: 20px;
	top: 50%;
	transform: translateY(-50%);
	width: 24px;
	height: 24px;
	flex-shrink: 0;
}

.profile-footer {
	text-align: center;
	color: #565f89;
}

.link-mail {
	color: inherit;
	text-decoration: none;
}

.link-mail:hover {
	color: #7aa2f7;
	text-decoration: underline;
}

